tests/NormalTests/paczka1/fuzzy1/31359550.err
Error in line 2: dGV9x A753 52,2
Error in line 14: uenl8l6G S18 20,6
Error in line 20: RwvShXdKhE A342 49,5
Error in line 34: TPhdadf S18 62,23
Error in line 32: jS9YifJI S18 9,1
